<resources>
    <string name="app_name">Assignment4</string>
    <string name="add_data">ADD DATA</string>
    <string name="update_data">UPDATE Data</string>
    <string name="view_data">VIEW Data</string>
    <string name="delete_a_data">Delete A Data</string>
    <string name="quantity">quantity:</string>
    <string name="category">category:</string>
    <string name="bookdescription">bookDescription:</string>
    <string name="authorname">AUTHORNAME:</string>
    <string name="bookid">bookid:</string>
    <string name="welcome_to_the_book_page">wELCOME TO THE book PAGE</string>
    <string name="bookdescriptionedittext">bookdescriptionedittext</string>
    <string name="bookidedittext">bookidedittext</string>
    <string name="authornameedittext">authornameedittext</string>
    <string name="categoryedittext">categoryedittext</string>
    <string name="quantityedittext">quantityedittext</string>
    <string name="bookname">bookname:</string>
    <string name="booknameedittext">booknameedittext</string>
    <string name="welcome_to_the_librarian_page">wELCOME TO THE librarian PAGE</string>
    <string name="librarianid">librarianId:</string>
    <string name="lilbrianidedittext">lilbrianidedittext</string>
    <string name="firstname">firstname:</string>
    <string name="firtsnameedittext">firtsnameedittext</string>
    <string name="lastname">lastname:</string>
    <string name="lastnameedittext">lastnameedittext</string>
    <string name="password">password:</string>
    <string name="passwordedittext">passwordedittext</string>
    <string name="add_librarian">ADD Librarian</string>
    <string name="update_librarian">UPDATE librarian</string>
    <string name="view_librarian">VIEW librarian</string>
    <string name="delete_a_librarian">Delete A librarian</string>
    <string name="add_student">ADD Student</string>
    <string name="update_student">UPDATE Student</string>
    <string name="view_student">VIEW Student</string>
    <string name="delete_student">Delete Student</string>
    <string name="welcome_to_the_student_page">wELCOME TO THE STUDENT PAGE</string>
    <string name="studentid">StudentID:</string>
    <string name="studentidedittext">studentidedittext</string>
    <string name="back_to_main">Back to main</string>
</resources>