<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context=".Book">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/welcome_to_the_book_page"
            android:layout_marginBottom="20dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/bookid"
                android:textAllCaps="true"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:inputType="number"
                android:hint="@string/bookidedittext"
                android:importantForAutofill="no"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/bookname"
                android:textAllCaps="true"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:background="@color/white"
                android:hint="@string/booknameedittext"
                android:importantForAutofill="no"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:text="@string/authorname"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:background="@color/white"
                android:hint="@string/authornameedittext"
                android:importantForAutofill="no"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:text="@string/bookdescription"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:inputType="text"
                android:hint="@string/bookdescriptionedittext"
                android:background="@color/white"
                android:importantForAutofill="no"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:text="@string/category"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textAllCaps="true"
                android:hint="@string/categoryedittext"
                android:importantForAutofill="no"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:text="@string/quantity"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:background="@color/white"
                android:hint="@string/quantityedittext"
                android:importantForAutofill="no"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_data"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_data"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_data"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_a_data"/>

            <Button
                android:id="@+id/Home_Screen_from_Book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_main"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>