<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        tools:context=".Librarian">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/welcome_to_the_librarian_page"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/librarianid"
                android:textAllCaps="true"
                android:importantForAutofill="no"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lilbrianidedittext"
                android:textAllCaps="true"
                android:importantForAutofill="no"
                android:inputType="number"
               android:background="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:text="@string/firstname"
                android:importantForAutofill="auto"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textAllCaps="true"
                android:importantForAutofill="no"
                android:inputType="text"
                android:hint="@string/firtsnameedittext"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:text="@string/lastname"
                android:importantForAutofill="no"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/lastnameedittext"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:text="@string/password"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="text"
                android:hint="@string/passwordedittext"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_librarian"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_librarian"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_librarian"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_a_librarian"/>

            <Button
                android:id="@+id/Home_Screen_from_Librarian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/back_to_main"/>

    </LinearLayout>

    </LinearLayout>
</ScrollView>